# ams-backend

./: .containerignore  .env  .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  ci-container-compose.yaml  docker-compose.yaml
.github/workflows/: check.yml  ci-build-tested.yml  ci-build-untested.yml  cross_compile.yml  test.yml
ams-api/: Cargo.toml  endpoints.md
ams-api/src/: auth.rs  error.rs  main.rs  openapi_docs.rs  response.rs  setup.rs
ams-api/src/app/: config.rs  mod.rs  state.rs
ams-api/src/routes/: attendances.rs  attendees.rs  config.rs  instructors.rs  mod.rs  subjects.rs
ams-db-schema/: init.sql
ams-facerec/: Cargo.toml
ams-facerec/model/: Dockerfile
ams-facerec/model/src/: app.py
ams-facerec/src/: lib.rs
ams-logic/: Cargo.toml
ams-logic/src/: prelude.rs
ams-logic/src/admins/: impls.rs  mod.rs  models.rs
ams-logic/src/attendances/: impls.rs  mod.rs
ams-logic/src/attendees/: impls.rs  mod.rs
ams-logic/src/entity/: attendees.rs  instructors.rs  mod.rs  prelude.rs  subject_dates.rs  subjects.rs  subjects_datas.rs  subjects_dates.rs
ams-logic/src/instructors/: mod.rs  models.rs
ams-logic/src/subjects/: impls.rs  mod.rs  models.rs
api/: Cargo.toml  endpoints.md
api/src/: auth.rs  error.rs  main.rs  openapi_doc.rs  openapi_docs.rs  response.rs  test_utils.rs
api/src/app/: config.rs  state.rs
api/src/routes/: admins.rs  attendances.rs  attendees.rs  auths.rs  config.rs  instructors.rs  mod.rs  subjects.rs  users.rs
common/: Cargo.toml
common/src/: lib.rs
db-schema/: init.sql
logic/: Cargo.toml
logic/src/: admins.rs  attendances.rs  attendees.rs  error.rs  instructors.rs  lib.rs  mod.rs  prelude.rs  subjects.rs  users.rs
logic/src/admins/: impls.rs  mod.rs
logic/src/attendances/: impls.rs  mod.rs  models.rs
logic/src/attendees/: impls.rs  mod.rs  models.rs
logic/src/database/: admins.rs  attendances.rs  attendees.rs  attendees_subjects.rs  instructors.rs  instructors_subjects.rs  mod.rs  prelude.rs  subjects.rs  users.rs
logic/src/entity/: admins.rs  attendances.rs  attendees.rs  attendees_subjects.rs  instructors.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  subjects.rs  users_subjects.rs
logic/src/instructors/: impls.rs  mod.rs  models.rs
logic/src/subjects/: impls.rs  mod.rs  models.rs
nn-model/: Cargo.toml
nn-model/src/: lib.rs
