[workspace]

members = ["ams-facerec", "ams-api", "ams-logic"]

[workspace.dependencies]
serde = { version = "1.0.152", features = ["serde_derive"] }
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
mockall = "0.11.3"
thiserror = "1.0.38"
serde_json = "1.0.93"
utoipa = { version = "3.0.3", features = ["axum_extras", "chrono", "uuid"] }
hyper = { version = "0.14.24", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
cron = "0.12.0"
sea-orm = { version = "0.11.0", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "mock",
    "postgres-array",
] }

[profile.release]
strip = true
