[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.6", features = ["multipart", "json", "macros"] }
tokio = {workspace = true}
sea-orm = { version = "0.11.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = {workspace = true}
tower-http = { version = "0.3.5", features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = {workspace = true}
chrono = {workspace = true}
dotenvy = {workspace = true}
dotenvy_macro = {workspace = true}
logic = {path = "../logic"}
mockall = {workspace = true}
tracing = "0.1.37"
