[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.6", features = ["multipart", "json", "macros", "headers"] }
tokio = {workspace = true, features = ["full"]}
serde = {workspace = true}
sea-orm = {workspace = true}
tower-http = { version = "0.3.5", features = ["trace", "normalize-path", "compression-gzip"] }
tower = "0.4.13"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = {workspace = true}
chrono = {workspace = true}
dotenvy = {workspace = true}
dotenvy_macro = {workspace = true}
logic = {path = "../logic"}
mockall = {workspace = true}
tracing = "0.1.37"
jsonwebtoken = "8.2.0"
once_cell = "1.17.1"
thiserror = {workspace = true}
nn-model = {path = "../nn-model"}
serde_json = {workspace = true}
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
common = {path = "../common"}

[dev-dependencies]
mime = "0.3.16"
rstest = "0.16.0"
hyper = {workspace = true}
