[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {workspace = true}
tokio = {workspace = true, features = ["full"]}
serde = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
dotenvy = {workspace = true}
dotenvy_macro = {workspace = true}
itertools = "0.10.5"
mockall = {workspace = true}
thiserror = {workspace = true}
sqlx = { version = "0.6.2", features = ["postgres"] }
serde_json = {workspace = true}
utoipa = { workspace = true }
